fix(users): ensure config dir exists before saving search history/notes
saveOnExitContent wrote directly to the config directory without
creating it first, failing on a fresh install. Switched to
Files.writeString/readString and log IOException at warn instead of
silently swallowing it at debug.